<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/PreferenceHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/widgetNameInputView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/widget_name" />

    <Switch
        android:id="@+id/headerEnabledSwitch"
        style="@style/PreferenceHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
        tools:checked="true" />

    <Spinner
        android:id="@+id/headerTextAlignmentSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/header_alignments"
        android:paddingBottom="12dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="12dp" />

    <CheckBox
        android:id="@+id/addEventHeaderButtonToggle"
        style="@style/ButtonWithIndent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add_event" />

    <CheckBox
        android:id="@+id/refreshHeaderButtonToggle"
        style="@style/ButtonWithIndent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_refresh" />

    <CheckBox
        android:id="@+id/settingsHeaderButtonToggle"
        style="@style/ButtonWithIndent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_settings" />

    <TextView
        style="@style/PreferenceHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data" />

    <Spinner
        android:id="@+id/daysToShowSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/days_to_show"
        android:paddingBottom="12dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="12dp" />

    <TextView
        style="@style/PreferenceHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/indicator_style" />

    <RadioGroup
        android:id="@+id/indicatorStyleRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/indicatorStyleNone"
            style="@style/ButtonWithIndent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/indicator_style_none" />

        <RadioButton
            android:id="@+id/indicatorStyleCircle"
            style="@style/ButtonWithIndent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/shape_circle_small_colored"
            android:text="@string/indicator_style_circle" />

        <RadioButton
            android:id="@+id/indicatorStyleRoundedRect"
            style="@style/ButtonWithIndent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/shape_rounded_rect_small_colored"
            android:text="@string/indicator_style_rounded_rect" />

    </RadioGroup>

    <TextView
        style="@style/PreferenceHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calendars" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/calendarsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_calendar" />

</LinearLayout>
