<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eventsHeader"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:minHeight="32dp"
    android:orientation="horizontal"
    android:paddingBottom="4dp"
    android:paddingTop="4dp"
    tools:showIn="@layout/widget_calendar">

    <LinearLayout
        android:id="@+id/headerTitleViewContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/headerTitleView"
            style="@style/TextWithShadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="2dp"
            android:paddingStart="2dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:text="Monday 13 June" />

    </LinearLayout>

    <ImageView
        android:id="@+id/add_event_header_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:srcCompat="@drawable/ic_add" />

    <ImageView
        android:id="@+id/refresh_header_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:srcCompat="@drawable/ic_refresh" />

    <ImageView
        android:id="@+id/settings_header_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:srcCompat="@drawable/ic_settings" />

</LinearLayout>
